--- a/src/page/MainPage/MainPage.scss
+++ b/src/page/MainPage/MainPage.scss
@@ -1,14 +1,22 @@
-
+* {
+    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family:'GalanoGrotesqueAlt', 'Trebuchet MS','Adjusted Trebuchet MS Fallback' sans-serif;
      margin-bottom: 40px;
      display: flex;
+     margin: 0 ;
+
+
+     
      
 }
 section{
-    margin: 40px auto;
-    
+    margin: 40px auto; 
 }
 
 
@@ -17,7 +25,6 @@ section{
    
     display: flex;
     // margin:auto 205.333px 60px;
-    padding: 0 16px;
     height: 472px;
     width: 1248px;
     flex-direction: column;
@@ -42,6 +49,88 @@ section{
     height: 369px ;
     margin-top: 40px;
 }
-.section4{
 
+
+
+
+
+.section6{
+  display: flex;
+  border-top: 1px solid  #b1b1b1;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0;
 }
+.section5_card{
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  height: 232px;
+  padding: 0 20px;
+  justify-content: start;
+}
+.section5_card li{
+  padding: 8px 0;
+ 
+}
+.section5_card a{
+    color: black;
+    font-size: 14px;
+}
+// .footer{
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     padding: 56px 0;
+//     background-color: rgb(26, 24, 22);
+//     color: white;
+//     font-weight: 600;
+// }
+// .footer_top{
+//     display: flex;
+//     width: 1280px;
+//     justify-content: space-between;
+// }
+// .footer_top_left{
+//     gap: 12px;
+//     display: flex;
+//     width: 40px;
+//     height: 40px;
+// }
+// .footer_top_right{
+//     gap: 12px;
+//     display: flex;
+//    width: 121px;
+//    height: 40px;
+// }
+// .footer_main{
+//     width: 1280px;
+//     padding-top: 16px;
+// }
+// .footer2{
+//     margin-bottom: 40px;
+// }
+// .footer2 a{
+//     color: white;
+//     text-decoration: none;
+//     height: 40px;
+// }
+// .footer2 span{
+//     font-size: 18px;  
+//     margin-right: 40px;
+// }
+// .footer_span_end{
+//     color: rgb(244, 182, 48);
+// }
+// .footer1 h2{
+//     padding-bottom: 12px;
+// }
+
+// .footer3 a{
+//     color: white; 
+// }
+// .footer3{
+//     font-size: 12px;
+//     font-weight: 300;
+// } 
